--- a/.github/workflows/publish-to-streamx.yaml
+++ b/.github/workflows/publish-to-streamx.yaml
@@ -5,10 +5,6 @@ on:
     types:
       - resource-published
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   publish-to-streamx:
     if: (github.event.client_payload.status == 200 || github.event.client_payload.status == 204) && endsWith(github.event.client_payload.path, '.md')
@@ -19,7 +15,7 @@ jobs:
         shell: bash
         run: |
           sleep 1s
-          streamx_key=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$//g')
+          streamx_key=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$//g' | sed 's/index//g')
           page_path=$(echo "${{ github.event.client_payload.path }}" | sed 's/\.md$//g' | sed 's/index//g')
           eds_page_url="${{ vars.EDS_DOMAIN_URL }}$page_path"
           eds_plain_page_url="${{ vars.EDS_DOMAIN_URL }}$streamx_key.plain.html"
